# ReadAlong

./: .gitignore  README.md
parent_tool/: pyproject.toml
parent_tool/app/: config.py  main.py
parent_tool/app/api/: dependencies.py  errors.py
parent_tool/app/jobs/: __init__.py  events.py  manager.py  repository.py
parent_tool/app/models/: __init__.py  audio.py  audio_workspace.py  capabilities.py  errors.py  export.py  export_workspace.py  jobs.py  ocr.py  page_workspace.py  pages.py  pipeline.py  proofread.py  proofread_workspace.py  voice_profile.py  workspace_catalog.py
parent_tool/app/pipeline/: artifacts.py  audio_validation.py  definitions.py  engine.py  hashing.py  paths.py  state_repository.py
parent_tool/app/services/: __init__.py  audio_workspace_service.py  capability_service.py  export_workspace_service.py  page_workspace_service.py  proofread_workspace_service.py  voice_profile_service.py  workspace_catalog_service.py  workspace_migration_service.py  (+1 more)
parent_tool/tests/: test_artifacts.py  test_audio_step.py  test_audio_validation.py  test_azure_tts.py  test_capability_service.py  test_hashing.py  test_health.py  test_job_manager.py  test_ocr_step.py  test_page_models.py  test_page_processing_step.py  test_page_workspace_service.py  test_pipeline_api.py  test_pipeline_engine.py  test_pipeline_models.py  test_proofread_step.py  test_recovery.py  test_state_repository.py  test_voice_profile_service.py  test_workspace_catalog.py  test_workspace_service.py
parent_tool/web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
poc/: README.md  (+6 more)
(+116 files in other folders)
